CMake 3.24: Fix FetchContent
Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/fortran/CMakeLists.txt
+++ b/fortran/CMakeLists.txt
@@ -81,12 +81,24 @@ include(FetchContent)
 
 # Get Spglib if it's run as stand-alone project
 if (NOT Spglib_IS_TOP_LEVEL)
-    FetchContent_Declare(Spglib
-            GIT_REPOSITORY https://github.com/spglib/spglib
-            GIT_TAG develop
-            FIND_PACKAGE_ARGS CONFIG
-    )
-    list(APPEND external_libs Spglib)
+    if (CMAKE_VERSION VERSION_LESS 3.24)
+        # TODO: Use by default when minimum is CMake 3.24
+        find_package(Spglib CONFIG QUIET)
+        if (NOT Spglib_FOUND)
+            FetchContent_Declare(Spglib
+                    GIT_REPOSITORY https://github.com/spglib/spglib
+                    GIT_TAG develop
+            )
+            list(APPEND external_libs Spglib)
+        endif ()
+    else ()
+        FetchContent_Declare(Spglib
+                GIT_REPOSITORY https://github.com/spglib/spglib
+                GIT_TAG develop
+                FIND_PACKAGE_ARGS CONFIG
+        )
+        list(APPEND external_libs Spglib)
+    endif ()
 endif ()
 FetchContent_MakeAvailable(${external_libs})
 
