Use Spglib_SOURCE_DIR to detect if project was defined
Using `Spglib_IS_TOP_LEVEL` does not work when in a chain of FetchContent

Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/fortran/CMakeLists.txt
+++ b/fortran/CMakeLists.txt
@@ -80,7 +80,7 @@ set(external_libs)
 include(FetchContent)
 
 # Get Spglib if it's run as stand-alone project
-if (NOT Spglib_IS_TOP_LEVEL)
+if (NOT Spglib_SOURCE_DIR)
     if (CMAKE_VERSION VERSION_LESS 3.24)
         # TODO: Use by default when minimum is CMake 3.24
         find_package(Spglib CONFIG QUIET)
