Enable macos and windows builders
Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/.github/workflows/step_test.yaml
+++ b/.github/workflows/step_test.yaml
@@ -27,20 +27,24 @@ jobs:
         toolchain: [ gcc, llvm, intel ]
         python-version: [ "3.8", "3.x" ]
         include:
-#          - os: windows-2019
-#            toolchain: windows
-#            python-version: "3.x"
           - os: macos-11
             toolchain: macos
+            python-version: "3.x"
+          - os: macos-latest
+            toolchain: macos
+            python-version: "3.x"
+          - os: macos-13
+            toolchain: macos
+            python-version: "3.x"
+          - os: macos-14
+            toolchain: macos
+            python-version: "3.x"
+          - os: windows-2019
+            toolchain: windows
             python-version: "3.x"
           - os: windows-latest
             toolchain: windows
             python-version: "3.x"
-            experimental: true
-          - os: macos-latest
-            toolchain: macos
-            python-version: "3.x"
-            experimental: true
 #          - python-version: "3.13"
 #            experimental: true
 #            pre: true
