--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,10 +95,8 @@ SPGLIB_USE_OMP = "OFF"
 write_to = "python/spglib/_version.py"
 
 [tool.cibuildwheel]
-# cp312: Cannot build numpy yet
-# macosx_arm64: Cannot test on Github. Could add Cirrus CI/Circle CI
 # pp, win32, i686, muslinux: Remove 32bit variants, PyPY interpreter and unnecessary musl variant
-skip = ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux*", "*-macosx_arm64", "cp312-*"]
+skip = ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux*"]
 test-extras = "test"
 test-command = "pytest {package}/test/functional/python"
 # Do not run test on emulated environments
