[Temp] Run all cibw_build
Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,7 +46,7 @@ jobs:
     uses: ./.github/workflows/step_build-wheel.yaml
     needs: [ tests ]
     with:
-      cibw_build: ${{ inputs.cibw_build || 'cp311-*' }}
+      cibw_build: ${{ inputs.cibw_build || '*' }}
 
   test-docs:
     name: 📘 test-docs
