--- a/.github/workflows/step_build-wheel.yaml
+++ b/.github/workflows/step_build-wheel.yaml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-latest, windows-latest, macOS-11, macOS-13, macOS-14 ]
+        os: [ ubuntu-latest, windows-latest, macOS-13, macOS-14 ]
 
     steps:
       - uses: actions/checkout@v4
@@ -49,4 +49,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: hynek/build-and-inspect-python-package@v2
+      - uses: hynek/build-and-inspect-python-package@v2'
+        with:
+          skip-wheel: true
