[Debug] is macos still failing?
Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/.github/workflows/step_test.yaml
+++ b/.github/workflows/step_test.yaml
@@ -30,10 +30,16 @@ jobs:
           - os: macos-11
             toolchain: macos
             python-version: "3.x"
+          - os: macos-12
+            toolchain: macos
+            python-version: "3.x"
           - os: macos-13
             toolchain: macos
             python-version: "3.x"
           - os: macos-14
+            toolchain: macos
+            python-version: "3.x"
+          - os: macos-latest
             toolchain: macos
             python-version: "3.x"
           - os: windows-2019
