chore: Update macos buidlers
- Remove macos-11
- Rename macos-14 to macos-latest

Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/.github/workflows/step_test.yaml
+++ b/.github/workflows/step_test.yaml
@@ -27,13 +27,10 @@ jobs:
         toolchain: [ gcc, llvm, intel ]
         python-version: [ "3.8", "3.x" ]
         include:
-          - os: macos-11
-            toolchain: macos
-            python-version: "3.x"
           - os: macos-13
             toolchain: macos
             python-version: "3.x"
-          - os: macos-14
+          - os: macos-latest
             toolchain: macos
             python-version: "3.x"
           - os: windows-2019
