--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,7 @@
 [build-system]
-requires = ["scikit-build-core", "numpy"]
+# Numpy build and runtime dependencies are linked to ABI compatibility
+# A new wheel rebuild is needed when changing these
+requires = ["scikit-build-core", "numpy~=2.0"]
 build-backend = "scikit_build_core.build"
 
 [project]
@@ -11,7 +13,7 @@ license-files = { paths = ["COPYING"] }
 readme = "python/README.rst"
 dynamic = ["version"]
 dependencies = [
-    "numpy>=1.20",
+    "numpy>=1.20,<3",
     "importlib-resources; python_version<'3.10'",
 ]
 authors = [
