Remove FetchContent Spglib in sub-projects
In retrospect it is not desired.

Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -75,12 +75,7 @@ include(FetchContent)
 
 # Get Spglib if it's run as stand-alone project
 if (NOT Spglib_SOURCE_DIR)
-    FetchContent_Declare(Spglib
-            GIT_REPOSITORY https://github.com/spglib/spglib
-            GIT_TAG develop
-            FIND_PACKAGE_ARGS CONFIG
-    )
-    list(APPEND external_libs Spglib)
+    find_package(Spglib REQUIRED CONFIG)
 endif ()
 
 set(BUILD_GMOCK OFF)
