--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -39,12 +39,7 @@ include(FetchContent)
 
 # Get Spglib if it's run as stand-alone project
 if (NOT Spglib_SOURCE_DIR)
-    FetchContent_Declare(Spglib
-            GIT_REPOSITORY https://github.com/spglib/spglib
-            GIT_TAG develop
-            FIND_PACKAGE_ARGS CONFIG
-    )
-    list(APPEND external_libs Spglib)
+    find_package(Spglib REQUIRED CONFIG)
 endif ()
 find_package(Python 3.9 COMPONENTS REQUIRED Interpreter Development.Module NumPy)
 FetchContent_MakeAvailable(${external_libs})
