--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ readme = "python/README.rst"
 dynamic = ["version"]
 dependencies = [
     "numpy>=1.20",
-    "typing-extensions; python_version<'3.9'",
+    "typing-extensions>=4.9.0; python_version<'3.13'",
     "importlib-resources; python_version<'3.10'",
 ]
 authors = [
