--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dynamic = ["version"]
 dependencies = [
     "numpy>=1.20,<3",
     "importlib-resources; python_version<'3.10'",
+    "typing-extensions; python_version<'3.10'",
 ]
 authors = [
     {name="Atsushi Togo", email="atz.togo@gmail.com"},
