--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -64,7 +64,7 @@ repos:
     hooks:
       - id: check-github-workflows
       - id: check-readthedocs
-  - repo: https://github.com/pseewald/fprettify
+  - repo: https://github.com/fortran-lang/fprettify
     rev: v0.3.7
     hooks:
       - id: fprettify
