Fix documentation linking issues
- Let autodoc2 link to `spglib.spglib`. Technically it is more correct to navigate
- Use `__all__` to declare public API. Cannot forward `*spglib.__all__` right now because of autodoc2 static limitations
- Fix references to `spglib.get_version` to mark `spglib.spg_get_version`

Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -191,6 +191,11 @@ exclude = [
     "database",
 ]
 
+[tool.ruff.lint.per-file-ignores]
+# In __init__ we define the public interface with __all__ and forward it with import *. Ruff considers it as an issue,
+# but this shouldn't be an issue for the top-level: https://github.com/astral-sh/ruff/issues/2407
+"__init__.py" = ["F403", "F405"]
+
 [tool.mypy]
 mypy_path = ["python"]
 files = ["python", "test/functional/python", "example/python_api"]
