--- a/pyproject.toml
+++ b/pyproject.toml
@@ -119,11 +119,11 @@ repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
 repair-wheel-command = "DYLD_LIBRARY_PATH=_install/lib delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
 
 [tool.pytest.ini_options]
-addopts = "-Werror -m 'not benchmark'"
+addopts = "-m 'not benchmark'"
 testpaths = ["test/functional/python"]
 markers = [
     # Define benchmark marker to avoid warnings of marker not defined
-    "benchmark: benchmarking tets",
+    "benchmark: benchmarking tests",
 ]
 
 [tool.coverage.run]
