--- a/.github/workflows/step_test.yaml
+++ b/.github/workflows/step_test.yaml
@@ -91,8 +91,10 @@ jobs:
     env:
       # This is a comma-separated list, add filters as needed with relevant documentation
       #   error: Treat all python warnings as error (always use)
+      #   pip._internal.metadata.importlib._dists: https://github.com/pypa/pip/issues/11684
       PYTHONWARNINGS: "\
         error,\
+        ignore::DeprecationWarning:pip._internal.metadata.importlib._dists,\
         "
     steps:
       - uses: actions/checkout@v4
